[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyRomano"
version = "0.1.0"
description = "Biblioteca para manejar números y medidas romanas."
readme = "README.md"
authors = [{name = "José Luis Alvarez Gago", email = "contacto@criptogalicia.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["roman", "numerals", "measures", "conversion"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/LocoInmaculado/PyRomano"